[package]
name = "growable-bloom-filter"
version = "0.2.2"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"
license = "MIT"
description = "Scalable Bloom Filters with serde support"
homepage = "https://github.com/dpbriggs/growable-bloom-filters"
repository = "https://github.com/dpbriggs/growable-bloom-filters"
keywords = ["bloom", "filter", "scalable", "serde"]
categories = ["data-structures"]
documentation = "https://docs.rs/growable-bloom-filter/latest/growable_bloom_filter/struct.GrowableBloom.html"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = {version="0.15.2", features=["serde"]}
serde = { version = "1.0.101", features = ["alloc"] } # damn it feels good be a gangster
seahash = "3.0.6"
serde_derive = "1.0.101"

[dev-dependencies]
serde_json = "1.0"