[package]
name = "growable-bloom-filter"
version = "1.0.3"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"
license = "MIT"
description = "Scalable Bloom Filters with serde support"
homepage = "https://github.com/dpbriggs/growable-bloom-filters"
repository = "https://github.com/dpbriggs/growable-bloom-filters"
keywords = ["bloom", "filter", "scalable", "serde"]
categories = ["data-structures"]
documentation = "https://docs.rs/growable-bloom-filter/latest/growable_bloom_filter/struct.GrowableBloom.html"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
serde = { version = "1.0.125" }
serde_bytes = "0.11"
serde_derive = "1.0.125"

[dev-dependencies]
serde_json = "1.0"

[features]
nightly = []
